--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
     <script src = 'Calculator.js' defer></script>
 <body>
-    <p class="output">Enter prime number p:</p>
-    <textarea name="" id="p_Input" cols="30" rows="2"> 10</textarea><p></p>
-    <p class="output">Enter prime number q:</p>
-    <textarea name="" id="q_Input" cols="30" rows="2"> 10</textarea><p></p>
+    <p class="output">Enter prime number p</p>
+    <textarea name="" id="p_Input" cols="30" rows="2"></textarea><p></p>
+    <p class="output">Enter prime number q</p>
+    <textarea name="" id="q_Input" cols="30" rows="2"></textarea><p></p>
     <p><button onclick="calculate_n()">Calculate n</button></p>
-    <textarea name="" id="n_Input" cols="30" rows="2"> 10</textarea><p></p>
-    <p class="output">Enter e: </p>
-    <textarea name="" id="e_Input" cols="30" rows="2"> 10</textarea><p></p>
+    <textarea name="" id="n_Input" cols="30" rows="2"></textarea><p></p>
+    <p class="output">Enter e </p>
+    <textarea name="" id="e_Input" cols="30" rows="2"></textarea><p></p>
     <p></p><button onclick= "calculate_d()">Calculate d</button></p>
-    <textarea name="" id="d_Output" cols="30" rows="2"> 10</textarea><p></p>
-    <p class="output">Enter list of integers:</p>
-    <textarea name="" id="User_Input" cols="50" rows="10"> 10</textarea><p></p>
+    <textarea name="" id="d_Output" cols="30" rows="2"></textarea><p></p>
+    <p class="output">Enter list of integers seperated by a space</p>
+    <textarea name="" id="User_Input" cols="30" rows="10"></textarea><p></p>
     <button onclick = "decryptedOutput()">Decrypt</button>
     <button onclick = "encryptedOutput()">Encrypt</button>
 
